--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   on_audio_query: ^2.8.1
   just_audio: ^0.9.43
   media_kit: ^1.1.11
+  provider: ^6.1.2
+  hive: ^2.2.3
+  fvm: ^3.2.1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +71,7 @@ flutter:
   assets:
     - assets/images/MEDIOX.gif
     - assets/images/MEDIOX.png
+    - assets/images/MEDIOX_2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
