Functionality     Audio:         1. Transformed audio playback to a provider for efficient background playback.         2. Set miniplayer.         3. Created new empty playlist from playlist screen.         4. Deleted playlist.         5. Added edit function to update name of the playlist.         6. Modified more options to set delete option according to pages, Eg: In all audios, delete option will not show.         7. Added favourite provider to enable the favourites as app state.         8. Implemented search functionality to each page.         9. Solved the keyboard overflow issue.         10. Added sync.     Video:         1. Created new empty playlist from playlist screen.         2. Deleted playlist.         3. Added edit function to update name of the playlist.         4. Implemented search functionality to each page.     Common:         1. Enabled dark mode app wide and saved the status. Design     Audio:         1. Redefined audio tile.         2. Redefined nullqueryartworkwidget.     Common:         1. Changed png image to gif in splash screen.         2. Splash image will change according to the theme.         3. Set ubuntu google font as the app font.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,10 @@ dependencies:
   fvm: ^3.2.1
   google_fonts: ^6.2.1
   video_player: ^2.9.3
-  video_storage_query: ^1.0.0
   photo_manager: ^3.6.4
   video_thumbnail: ^0.5.3
   palette_generator: ^0.3.3+6
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
@@ -74,9 +74,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/MEDIOX.gif
-    - assets/images/MEDIOX.png
-    - assets/images/MEDIOX_2.png
+    - assets/gifs/MEDIOX_dark_bg_removed.gif
+    - assets/gifs/MEDIOX_light_bg_removed.gif
+    - assets/images/MEDIOX_dark_bg_removed.png
+    - assets/images/MEDIOX_light_bg_removed.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
